fixed typo in package name inside the ManagerControllerTests.java .